show all members, also the ones without id